--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.20",
-    "pg": "^8.8.0"
+    "pg": "^8.8.0",
+    "yup": "^0.32.11"
   }
 }
